--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,10 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-    <groupId>com.sun.mail</groupId>
-    <artifactId>javax.mail</artifactId>
-    <version>1.6.0</version>
-</dependency>
+    		<groupId>com.sendgrid</groupId>
+    		<artifactId>sendgrid-java</artifactId>
+    		<version>4.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
